--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\CameraController.cs" />
+     <Compile Include="Assets\Scripts\LoadNewArea.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\SuperTiled2Unity\Examples\Overhead\Sprites\MegaDad\OverheadMegaDadController.cs" />
      <Compile Include="Assets\SuperTiled2Unity\Scripts\CollisionObject.cs" />
@@ -85,40 +86,40 @@
      <Compile Include="Assets\SuperTiled2Unity\Scripts\TileObjectAnimator.cs" />
      <None Include="Assets\SuperTiled2Unity\Examples\Overhead\Maps\Zoria Tileset\readme.txt" />
  <Reference Include="Unity.Timeline.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.VSCode.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.ugui">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.ugui.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.ugui.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="Unity.CollabProxy.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Rider.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.Sprite.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.2D.Sprite.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.2D.Tilemap.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.2D.Tilemap.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.VisualStudio.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.VisualStudio.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="Unity.ugui.Editor">
- <HintPath>C:/Users/mrpic/Documents/ComSci/Unity/TopDownShooter/Library/ScriptAssemblies/Unity.ugui.Editor.dll</HintPath>
+ <HintPath>C:/Users/mrpic/Desktop/TopDownShooter/Library/ScriptAssemblies/Unity.ugui.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.3.0a5/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
