--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,12 +53,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\CameraController.cs" />
-     <Compile Include="Assets\Scripts\LoadNewArea.cs" />
-     <Compile Include="Assets\Scripts\PlayerController.cs" />
-     <Compile Include="Assets\Scripts\PlayerStartPoint.cs" />
-     <Compile Include="Assets\Scripts\SkeletController.cs" />
-     <Compile Include="Assets\Scripts\YRendering.cs" />
+     <Compile Include="Assets\Scripts\Cam\CameraController.cs" />
+     <Compile Include="Assets\Scripts\Cam\YRendering.cs" />
+     <Compile Include="Assets\Scripts\Entity\HealthComponent.cs" />
+     <Compile Include="Assets\Scripts\Entity\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\Entity\PlayerHealthComponent.cs" />
+     <Compile Include="Assets\Scripts\Entity\SkeletController.cs" />
+     <Compile Include="Assets\Scripts\Level\LoadNewArea.cs" />
+     <Compile Include="Assets\Scripts\Level\PlayerStartPoint.cs" />
      <Compile Include="Assets\SuperTiled2Unity\Examples\Overhead\Sprites\MegaDad\OverheadMegaDadController.cs" />
      <Compile Include="Assets\SuperTiled2Unity\Scripts\CollisionObject.cs" />
      <Compile Include="Assets\SuperTiled2Unity\Scripts\CollisionShapeType.cs" />
